Navbar fixes: Added close icon, removed white space, fixed menu icon position

--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,7 @@
 
 .topnav {
   overflow: hidden;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgb(0, 0, 0, 0.2);
   padding: 10px 0;
 }
 
@@ -35,21 +35,30 @@
 
 .topnav .icon {
   display: none;
+  padding: 0;
 }
-
+.brand-title {
+  padding: 1em 1em;
+}
 @media screen and (max-width: 1000px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     display: block;
   }
 }
-
+.topnav.responsive {
+  transition: all 0.9s ease-in;
+} 
 @media screen and (max-width: 1000px) {
+  .brand-title > img {
+    height: 30px !important;
+    padding-right: 0;
+  }
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 4px;
+    top: 20px;
   }
   .topnav.responsive a {
     float: none;
@@ -123,4 +132,34 @@ div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
 
 .image{
   padding-left: 10px;
+}
+
+@media (min-width: 768px) {
+  .container {
+      max-width: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .container {
+      max-width: 100%;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container{
+    max-width: 1320px;
+  }
 }
